deploy/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
        - name: apache-conf
          configMap:
            name: wordpress-apache-conf
        - name: mu-plugins
          configMap:
            name: wordpress-mu-plugins
      containers:
        - name: wordpress
          image: wordpress:6.6.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: apache-conf
              mountPath: /etc/apache2/conf-enabled/servername.conf
              subPath: servername.conf
            - name: mu-plugins
              mountPath: /var/www/html/wp-content/mu-plugins

          readinessProbe:
            httpGet: { path: /wp-includes/images/blank.gif, port: 80 }
          livenessProbe:
            httpGet: { path: /wp-includes/images/blank.gif, port: 80 }

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
